--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 <body>
     <main>
 <section id="container">
-    <article class="cartao">
+    
+    <article class="cartao"></article>
         <div class="cartao__conteudo">
-            <h3>programação</h3>
+            <h3>Artes</h3>
             <div class="cartao__conteudo__pergunta">
-                o que é JavaScript?
+                Por que a arte é importante?
             </div>
             <div class="cartao__conteuo__resposta">
-                
+                Por meio da arte a humanidade expressa suas necessidades, crenças, desejos, sonhos.
             </div>
         </div>
     </article>
