--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="cartao__conteudo">
                     <h3>Artes</h3>
                     <div class="cartao__conteudo__pergunta">
-                        1Como a arte pode influenciar a percepção que temos do mundo ao nosso redor?
+                       1 Como a arte pode influenciar a percepção que temos do mundo ao nosso redor?
                     </div>
                     <div class="cartao__conteudo__resposta"></div>
                     A arte nos ajuda a ver diferentes perspectivas e a compreender.Ela pode provocar empatia e nos fazer
@@ -26,7 +26,7 @@
             <div class="cartao__conteudo">
                 <h3>Artes</h3>
                 <div class="cartao__conteudo__pergunta">
-                   2 Qual a importância da diversidade cultural nas artes?
+                    2Qual a importância da diversidade cultural nas artes?
                 </div>
                 <div class="cartao__conteudo__resposta"></div>
                 A diversidade cultural enriquece a arte, trazendo novas vozes e experiências.
@@ -37,10 +37,10 @@
             <div class="cartao__conteudo">
                 <h3>Artes</h3>
                 <div class="cartao__conteudo__pergunta">
-                 4   
+                  3Como a arte pode contribuir para a saúde mental e o bem-estar?
                 </div>
                 <div class="cartao__conteudo__resposta"></div>
-                A diversidade cultural enriquece a arte, trazendo novas vozes e experiências.
+                Serve como terapia, aliviando estresse e promovendo conexão emocional.
             </div>
         </article>
 
@@ -48,10 +48,11 @@
             <div class="cartao__conteudo">
                 <h3>Artes</h3>
                 <div class="cartao__conteudo__pergunta">
-               5     
+               4 Como a globalização afetou a produção e a apreciação da arte contemporânea?    
                 </div>
                 <div class="cartao__conteudo__resposta"></div>
-                A diversidade cultural enriquece a arte, trazendo novas vozes e experiências.
+                Amplia intercâmbio de ideias, diversificando influências, mas pode gerar homogeneização cultural.
+
             </div>
         </article>
 
@@ -59,21 +60,22 @@
             <div class="cartao__conteudo">
                 <h3>Artes</h3>
                 <div class="cartao__conteudo__pergunta">
-                 6   
+                 5De que maneira a arte pode ser usada como uma forma de protesto ou resistência?
                 </div>
                 <div class="cartao__conteudo__resposta"></div>
-                A diversidade cultural enriquece a arte, trazendo novas vozes e experiências.
+                Comunica injustiças e inspira mudanças sociais de forma acessível.
+                 
             </div>
         </article>
-7
+
         <article class="cartao">
             <div class="cartao__conteudo">
                 <h3>Artes</h3>
                 <div class="cartao__conteudo__pergunta">
-                    
+                    6Você acredita que a arte deve ser acessível a todos? 
                 </div>
                 <div class="cartao__conteudo__resposta"></div>
-                A diversidade cultural enriquece a arte, trazendo novas vozes e experiências.
+                Deve ser universal, promovendo inclusão e enriquecendo vidas.
             </div>
         </article>
 8
@@ -81,10 +83,10 @@
             <div class="cartao__conteudo">
                 <h3>Artes</h3>
                 <div class="cartao__conteudo__pergunta">
-                9    
+                7De que forma a arte digital está mudando a percepção e a criação artística?
                 </div>
                 <div class="cartao__conteudo__resposta"></div>
-                A diversidade cultural enriquece a arte, trazendo novas vozes e experiências.
+                Democratiza a criação e desafia formas tradicionais de apreciação, permitindo novas experiências interativas.
             </div>
         </article>
 
@@ -92,12 +94,38 @@
             <div class="cartao__conteudo">
                 <h3>Artes</h3>
                 <div class="cartao__conteudo__pergunta">
-                  10  
+                  8Quais são as implicações éticas da apropriação cultural na arte?
                 </div>
                 <div class="cartao__conteudo__resposta"></div>
-                A diversidade cultural enriquece a arte, trazendo novas vozes e experiências.
+                Pode levar à exploração e descontextualização, levantando questões éticas sobre consentimento e respeito.
             </div>
         </article>
+
+    </article>
+
+    <article class="cartao">
+        <div class="cartao__conteudo">
+            <h3>Artes</h3>
+            <div class="cartao__conteudo__pergunta">
+              9Como a arte pode ajudar na preservação da memória cultural de um povo?
+            </div>
+            <div class="cartao__conteudo__resposta"></div>
+            A arte documenta tradições e experiências, transmitindo a identidade cultural entre gerações.
+        </div>
+    </article>
+
+</article>
+
+<article class="cartao">
+    <div class="cartao__conteudo">
+        <h3>Artes</h3>
+        <div class="cartao__conteudo__pergunta">
+          10Como o ambiente urbano influencia as formas de arte contemporânea?
+        </div>
+        <div class="cartao__conteudo__resposta"></div>
+        Como o ambiente urbano influencia as formas de arte contemporânea?
+    </div>
+</article>
         </section>
     </main>
     <footer>
