--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="cartao__conteudo">
                     <h3>Artes</h3>
                     <div class="cartao__conteudo__pergunta">
-                       1 Como a arte pode influenciar a percepção que temos do mundo ao nosso redor?
+                       1.Como a arte pode influenciar a percepção que temos do mundo ao nosso redor?
                     </div>
                     <div class="cartao__conteudo__resposta"></div>
                     A arte nos ajuda a ver diferentes perspectivas e a compreender.Ela pode provocar empatia e nos fazer
@@ -30,7 +30,7 @@
             <div class="cartao__conteudo">
                 <h3>Artes</h3>
                 <div class="cartao__conteudo__pergunta">
-                    2Qual a importância da diversidade cultural nas artes?
+                    2.Qual a importância da diversidade cultural nas artes?
                 </div>
                 <div class="cartao__conteudo__resposta"></div>
                 A diversidade cultural enriquece a arte, trazendo novas vozes e experiências.
@@ -41,7 +41,7 @@
             <div class="cartao__conteudo">
                 <h3>Artes</h3>
                 <div class="cartao__conteudo__pergunta">
-                  3Como a arte pode contribuir para a saúde mental e o bem-estar?
+                  3.Como a arte pode contribuir para a saúde mental e o bem-estar?
                 </div>
                 <div class="cartao__conteudo__resposta"></div>
                 Serve como terapia, aliviando estresse e promovendo conexão emocional.
@@ -52,7 +52,7 @@
             <div class="cartao__conteudo">
                 <h3>Artes</h3>
                 <div class="cartao__conteudo__pergunta">
-               4 Como a globalização afetou a produção e a apreciação da arte contemporânea?    
+               4.Como a globalização afetou a produção e a apreciação da arte contemporânea?    
                 </div>
                 <div class="cartao__conteudo__resposta"></div>
                 Amplia intercâmbio de ideias, diversificando influências, mas pode gerar homogeneização cultural.
@@ -64,7 +64,7 @@
             <div class="cartao__conteudo">
                 <h3>Artes</h3>
                 <div class="cartao__conteudo__pergunta">
-                 5De que maneira a arte pode ser usada como uma forma de protesto ou resistência?
+                 5.De que maneira a arte pode ser usada como uma forma de protesto ou resistência?
                 </div>
                 <div class="cartao__conteudo__resposta"></div>
                 Comunica injustiças e inspira mudanças sociais de forma acessível.
@@ -76,7 +76,7 @@
             <div class="cartao__conteudo">
                 <h3>Artes</h3>
                 <div class="cartao__conteudo__pergunta">
-                    6Você acredita que a arte deve ser acessível a todos? 
+                    6.Você acredita que a arte deve ser acessível a todos? 
                 </div>
                 <div class="cartao__conteudo__resposta"></div>
                 Deve ser universal, promovendo inclusão e enriquecendo vidas.
@@ -87,7 +87,7 @@
             <div class="cartao__conteudo">
                 <h3>Artes</h3>
                 <div class="cartao__conteudo__pergunta">
-                7De que forma a arte digital está mudando a percepção e a criação artística?
+                7.De que forma a arte digital está mudando a percepção e a criação artística?
                 </div>
                 <div class="cartao__conteudo__resposta"></div>
                 Democratiza a criação e desafia formas tradicionais de apreciação, permitindo novas experiências interativas.
@@ -98,7 +98,7 @@
             <div class="cartao__conteudo">
                 <h3>Artes</h3>
                 <div class="cartao__conteudo__pergunta">
-                  8Quais são as implicações éticas da apropriação cultural na arte?
+                  8.Quais são as implicações éticas da apropriação cultural na arte?
                 </div>
                 <div class="cartao__conteudo__resposta"></div>
                 Pode levar à exploração e descontextualização, levantando questões éticas sobre consentimento e respeito.
@@ -111,7 +111,7 @@
         <div class="cartao__conteudo">
             <h3>Artes</h3>
             <div class="cartao__conteudo__pergunta">
-              9Como a arte pode ajudar na preservação da memória cultural de um povo?
+              9.Como a arte pode ajudar na preservação da memória cultural de um povo?
             </div>
             <div class="cartao__conteudo__resposta"></div>
             A arte documenta tradições e experiências, transmitindo a identidade cultural entre gerações.
@@ -124,7 +124,7 @@
     <div class="cartao__conteudo">
         <h3>Artes</h3>
         <div class="cartao__conteudo__pergunta">
-          10Como o ambiente urbano influencia as formas de arte contemporânea?
+          10.Como o ambiente urbano influencia as formas de arte contemporânea?
         </div>
         <div class="cartao__conteudo__resposta"></div>
         Como o ambiente urbano influencia as formas de arte contemporânea?
