--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 Deve ser universal, promovendo inclusão e enriquecendo vidas.
             </div>
         </article>
-8
+
         <article class="cartao">
             <div class="cartao__conteudo">
                 <h3>Artes</h3>
@@ -127,7 +127,7 @@
           10.Como o ambiente urbano influencia as formas de arte contemporânea?
         </div>
         <div class="cartao__conteudo__resposta"></div>
-        Como o ambiente urbano influencia as formas de arte contemporânea?
+        O ambiente urbano influencia a arte contemporânea ao inspirar temas, formas e práticas que refletem a dinâmica social, cultural e visual das cidades.
     </div>
 </article>
         </section>
