--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
@@ -18,118 +18,122 @@
                 <div class="cartao__conteudo">
                     <h3>Artes</h3>
                     <div class="cartao__conteudo__pergunta">
-                       1.Como a arte pode influenciar a percepção que temos do mundo ao nosso redor?
+                        1.Como a arte pode influenciar a percepção que temos do mundo ao nosso redor?
                     </div>
                     <div class="cartao__conteudo__resposta"></div>
                     A arte nos ajuda a ver diferentes perspectivas e a compreender.Ela pode provocar empatia e nos fazer
                     refletir.
                 </div>
             </article>
-        
-        <article class="cartao">
-            <div class="cartao__conteudo">
-                <h3>Artes</h3>
-                <div class="cartao__conteudo__pergunta">
-                    2.Qual a importância da diversidade cultural nas artes?
+
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Artes</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        2.Qual a importância da diversidade cultural nas artes?
+                    </div>
+                    <div class="cartao__conteudo__resposta"></div>
+                    A diversidade cultural enriquece a arte, trazendo novas vozes e experiências.
                 </div>
-                <div class="cartao__conteudo__resposta"></div>
-                A diversidade cultural enriquece a arte, trazendo novas vozes e experiências.
-            </div>
-        </article>
+            </article>
 
-        <article class="cartao">
-            <div class="cartao__conteudo">
-                <h3>Artes</h3>
-                <div class="cartao__conteudo__pergunta">
-                  3.Como a arte pode contribuir para a saúde mental e o bem-estar?
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Artes</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        3.Como a arte pode contribuir para a saúde mental e o bem-estar?
+                    </div>
+                    <div class="cartao__conteudo__resposta"></div>
+                    Serve como terapia, aliviando estresse e promovendo conexão emocional.
                 </div>
-                <div class="cartao__conteudo__resposta"></div>
-                Serve como terapia, aliviando estresse e promovendo conexão emocional.
-            </div>
-        </article>
+            </article>
 
-        <article class="cartao">
-            <div class="cartao__conteudo">
-                <h3>Artes</h3>
-                <div class="cartao__conteudo__pergunta">
-               4.Como a globalização afetou a produção e a apreciação da arte contemporânea?    
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Artes</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        4.Como a globalização afetou a produção e a apreciação da arte contemporânea?
+                    </div>
+                    <div class="cartao__conteudo__resposta"></div>
+                    Amplia intercâmbio de ideias, diversificando influências, mas pode gerar homogeneização cultural.
+
                 </div>
-                <div class="cartao__conteudo__resposta"></div>
-                Amplia intercâmbio de ideias, diversificando influências, mas pode gerar homogeneização cultural.
+            </article>
 
-            </div>
-        </article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Artes</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        5.De que maneira a arte pode ser usada como uma forma de protesto ou resistência?
+                    </div>
+                    <div class="cartao__conteudo__resposta"></div>
+                    Comunica injustiças e inspira mudanças sociais de forma acessível.
 
-        <article class="cartao">
-            <div class="cartao__conteudo">
-                <h3>Artes</h3>
-                <div class="cartao__conteudo__pergunta">
-                 5.De que maneira a arte pode ser usada como uma forma de protesto ou resistência?
                 </div>
-                <div class="cartao__conteudo__resposta"></div>
-                Comunica injustiças e inspira mudanças sociais de forma acessível.
-                 
-            </div>
-        </article>
+            </article>
 
-        <article class="cartao">
-            <div class="cartao__conteudo">
-                <h3>Artes</h3>
-                <div class="cartao__conteudo__pergunta">
-                    6.Você acredita que a arte deve ser acessível a todos? 
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Artes</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        6.Você acredita que a arte deve ser acessível a todos?
+                    </div>
+                    <div class="cartao__conteudo__resposta"></div>
+                    Deve ser universal, promovendo inclusão e enriquecendo vidas.
                 </div>
-                <div class="cartao__conteudo__resposta"></div>
-                Deve ser universal, promovendo inclusão e enriquecendo vidas.
-            </div>
-        </article>
+            </article>
 
-        <article class="cartao">
-            <div class="cartao__conteudo">
-                <h3>Artes</h3>
-                <div class="cartao__conteudo__pergunta">
-                7.De que forma a arte digital está mudando a percepção e a criação artística?
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Artes</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        7.De que forma a arte digital está mudando a percepção e a criação artística?
+                    </div>
+                    <div class="cartao__conteudo__resposta"></div>
+                    Democratiza a criação e desafia formas tradicionais de apreciação, permitindo novas experiências
+                    interativas.
+                    }
                 </div>
-                <div class="cartao__conteudo__resposta"></div>
-                Democratiza a criação e desafia formas tradicionais de apreciação, permitindo novas experiências interativas.
-            </div>
-        </article>
+            </article>
 
-        <article class="cartao">
-            <div class="cartao__conteudo">
-                <h3>Artes</h3>
-                <div class="cartao__conteudo__pergunta">
-                  8.Quais são as implicações éticas da apropriação cultural na arte?
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Artes</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        8.Quais são as implicações éticas da apropriação cultural na arte?
+                    </div>
+                    <div class="cartao__conteudo__resposta"></div>
+                    Pode levar à exploração e descontextualização, levantando questões éticas sobre consentimento e
+                    respeito.
                 </div>
-                <div class="cartao__conteudo__resposta"></div>
-                Pode levar à exploração e descontextualização, levantando questões éticas sobre consentimento e respeito.
-            </div>
-        </article>
+            </article>
 
-    </article>
+            </article>
 
-    <article class="cartao">
-        <div class="cartao__conteudo">
-            <h3>Artes</h3>
-            <div class="cartao__conteudo__pergunta">
-              9.Como a arte pode ajudar na preservação da memória cultural de um povo?
-            </div>
-            <div class="cartao__conteudo__resposta"></div>
-            A arte documenta tradições e experiências, transmitindo a identidade cultural entre gerações.
-        </div>
-    </article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Artes</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        9.Como a arte pode ajudar na preservação da memória cultural de um povo?
+                    </div>
+                    <div class="cartao__conteudo__resposta"></div>
+                    A arte documenta tradições e experiências, transmitindo a identidade cultural entre gerações.
+                </div>
+            </article>
 
-</article>
+            </article>
 
-<article class="cartao">
-    <div class="cartao__conteudo">
-        <h3>Artes</h3>
-        <div class="cartao__conteudo__pergunta">
-          10.Como o ambiente urbano influencia as formas de arte contemporânea?
-        </div>
-        <div class="cartao__conteudo__resposta"></div>
-        O ambiente urbano influencia a arte contemporânea ao inspirar temas, formas e práticas que refletem a dinâmica social, cultural e visual das cidades.
-    </div>
-</article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Artes</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        10.Como o ambiente urbano influencia as formas de arte contemporânea?
+                    </div>
+                    <div class="cartao__conteudo__resposta"></div>
+                    O ambiente urbano influencia a arte contemporânea ao inspirar temas, formas e práticas que refletem
+                    a dinâmica social, cultural e visual das cidades.
+                </div>
+            </article>
         </section>
     </main>
     <footer>
