--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
                         1.Como a arte pode influenciar a percepção que temos do mundo ao nosso redor?
                     </div>
                     <div class="cartao__conteudo__resposta"></div>
-                    A arte nos ajuda a ver diferentes perspectivas e a compreender.Ela pode provocar empatia e nos fazer
-                    refletir.
+                    A arte nos ajuda a ver diferentes perspectivas e a compreender.Ela pode provocar empatia.
                 </div>
             </article>
 
@@ -33,7 +32,7 @@
                         2.Qual a importância da diversidade cultural nas artes?
                     </div>
                     <div class="cartao__conteudo__resposta"></div>
-                    A diversidade cultural enriquece a arte, trazendo novas vozes e experiências.
+                    Enriquece a arte, trazendo novas vozes e experiências.
                 </div>
             </article>
 
